dynamic_cv_app/src/styles/index.css
:root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
  color-scheme: light dark;
  color: rgba(255, 255, 255, 0.87);
  background-color: #242424;
  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

a {
  font-weight: 500;
  color: #646cff;
  text-decoration: inherit;
}

a:hover {
  color: #535bf2;
}

body {
  margin: 0;
  display: flex;
  justify-content: center;
  align-items: flex-start;
  min-height: 100vh;
  flex-direction: column;
  padding: 2rem;
}

h1 {
  font-size: 3.2em;
  line-height: 1.1;
}

form {
  width: 100%;
  max-width: 600px;
  padding: 20px;
  margin: 0 auto;
  border-radius: 8px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
}

h2 {
  text-align: center;
  margin-bottom: 20px;
  font-size: 24px;
  color: white;
}

button {
  margin-top: 1rem;
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
  font-size: 1em;
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
  transition: border-color 0.25s;
  width: auto;
}

button:hover {
  border-color: #61dafb;
}

button:focus,
button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
}

.fab-save-button {
  position: fixed;
  bottom: 20px;
  right: 20px;
  background-color: #227124;
  border-radius: 25%;
  padding: 15px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  font-size: 20px;
  z-index: 10;
}

.fab-save-button:hover {
  background-color: #4caf50;
}

@media (prefers-color-scheme: light) {
  :root {
    color: #213547;
  }
  a:hover {
    color: #61dafb;
  }
}

.container {
  max-width: 1200px;
  margin: 0 auto;
  padding: 2rem;
  border-radius: 8px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  overflow: hidden;
}

.cv-wrapper {
  padding: 1.5rem;
  border-radius: 8px;
  overflow: hidden;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
}

ul {
  list-style-type: none;
  padding-left: 0;
  margin-left: 0;
  text-align: left;
}

ul li {
  margin-bottom: 1rem;
  font-size: 1.1em;
  padding-left: 10px;
  padding-top: 1rem;
}

.cv-name {
  cursor: pointer;
  transition: color 0.3s ease;
}

.cv-name:hover {
  color: #61dafb;
}

.form-group {
  display: flex;
  flex-direction: column;
  margin-bottom: 15px;
}

.form-group label {
  font-weight: bold;
  margin-bottom: 5px;
}

.form-group input {
  padding: 10px;
  font-size: 16px;
  width: 100%;
  box-sizing: border-box;
  border-radius: 5px;
  border: 1px solid #ddd;
  background-color: #333;
  color: white;
}

button[type="button"] {
  margin-top: 10px;
  background-color: #4caf50;
}

button[type="submit"] {
  background-color: #227124;
  width: 100%;
}

h4 {
  margin-top: 20px;
  color: white;
  margin-bottom: 10px;
}

.cv-list {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: center;
  padding: 20px;
}

.cv-item {
  background-color: #333;
  border-radius: 8px;
  padding: 20px;
  width: 100%;
  max-width: 350px;
  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.cv-item:hover {
  transform: scale(1.03);
  box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
}

.cv-name {
  font-size: 1.5rem;
  font-weight: bold;
  color: white;
  text-decoration: none;
  margin-bottom: 10px;
  transition: color 0.3s ease;
}

.cv-name:hover {
  color: #61dafb;
}

.cv-details {
  color: #f1f1f1;
  font-size: 1rem;
}

.cv-details h4 {
  margin-top: 10px;
  color: #fff;
}

.button-container {
  margin-top: 15px;
  display: flex;
  justify-content: space-between;
}

button {
  padding: 8px 12px;
  font-size: 1rem;
  background-color: #1a1a1a;
  color: white;
  border-radius: 8px;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

button:hover {
  background-color: #61dafb;
}

button:focus,
button:focus-visible {
  outline: none;
  box-shadow: 0 0 0 3px #61dafb;
}

